--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="heading">
 		<h1>Address Book</h1>
-	</div>
+		</div>
 	
 		<div class="address-form">
 			<div class="form-group">
@@ -37,6 +37,8 @@
 			
 		</div>
 		<div class="address-book">
+		    <button id="delete">Delete</button>
+			<button id="sort">Sort</button>
 			<table id="address-book">
 			</table>
 		</div>
